Project ProjectShopBotEcommerce {
  database_type: "PostgreSQL"
  Note: "ERD ShopBot ecommerce — catalog (menu_items), orders, payments"
}

Table roles {
  id int [pk, increment]
  name varchar(50) [not null, unique, note: "admin|seller|customer"]
}

Table users {
  id int [pk, increment]
  role_id int [not null, ref: > roles.id]
  full_name varchar(120) [not null]
  username varchar(50) [not null, unique]
  password_hash varchar(255) [not null]
  phone varchar(20)
  created_at timestamp [not null]
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null, unique]
}

Table menu_items {
  id int [pk, increment]
  category_id int [not null, ref: > categories.id, note: "Bang catalog san pham (entity Product)"]
  name varchar(120) [not null]
  description text
  price decimal(12,2) [not null]
  is_available boolean [not null, default: true]
  created_at timestamp [not null]
}

Table orders {
  id int [pk, increment]
  created_by int [not null, ref: > users.id]
  customer_name varchar(120)
  order_type varchar(20) [not null, note: "shipping|pickup"]
  status varchar(20) [not null, note: "pending|confirmed|packing|shipping|done|cancelled"]
  ordered_at timestamp [not null]
  note text
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  menu_item_id int [not null, ref: > menu_items.id, note: "FK productId trong code"]
  quantity int [not null]
  unit_price decimal(12,2) [not null]
  item_note text
}

Table payments {
  id int [pk, increment]
  order_id int [not null, unique, ref: > orders.id]
  payment_method varchar(20) [not null, note: "cod|vnpay|momo|stripe"]
  amount decimal(12,2) [not null]
  paid_at timestamp [not null]
  status varchar(20) [not null, note: "success|failed|refunded"]
  transaction_ref varchar(100)
}
